<resources>
    <string name="app_name">Safinance</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="action_sort">sort</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="date_filter">Date Filter</string>
    <string name="profile">Profile</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder cash flow statement.</string>
    <string name="notify_channel_name">Cash Flow Reminder</string>
    <string name="notify_content">Time Up!</string>

    <string name="summary_profile">View and edit profile</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="total">Total</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="date">Date</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    
    <string name="pref_key_profile">key_profile</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="login">Masuk</string>
</resources>