<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="@string/pref_key_profile"
        android:title="@string/profile"
        android:summary="@string/summary_profile" />

    <ListPreference
        android:key="@string/pref_key_dark"
        android:title="@string/pref_dark_title"
        android:defaultValue="@string/pref_dark_follow_system"
        android:entries="@array/dark_mode"
        android:entryValues="@array/dark_mode_value"
        app:useSimpleSummaryProvider="true"/>

    <SwitchPreference
        android:key="@string/pref_key_notify"
        android:title="@string/pref_notify_name"
        android:summary="@string/pref_notify_summary"
        android:defaultValue="true" />

</PreferenceScreen>
